apps/market-data/sin/ui-apps/alc-biztech-reporter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alc-biztech-reporter
spec:
  selector:
    matchLabels:
      app: alc-biztech-reporter
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: alc-biztech-reporter
    spec:
      serviceAccountName: alc-biztech-reporter-sa-prod
      containers:
        - name: alc-biztech-reporter
          image: 346086605621.dkr.ecr.ap-southeast-1.amazonaws.com/alc-biztech-reporter:2025.1.17.208-26ff06e
          resources:
            requests:
              cpu: "200m"
              memory: 500Mi
            limits:
              cpu: "500m"
              memory: 700Mi
          ports:
            - containerPort: 5000
      tolerations:
        - key: node/destiny
          operator: 'Equal'
          value: 'alc-ui'
          effect: 'NoSchedule'
      nodeSelector:
        node/destiny: alc-ui
