apps/market-data/sin/ui-apps/alc-biztech-reporter/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alc-biztech-reporter
spec:
  selector:
    app: alc-biztech-reporter
  ports:
    - protocol: TCP
      port: 5000
